fixed visible contact info when fullscreen bug

--- a/CSS/css.css
+++ b/CSS/css.css
@@ -59,6 +59,7 @@
     position: relative;
     background-color: white;
     height: fit-content;
+    text-align: center;
     width: 80vw;
     left: 50%;
     margin-left: -40vw;
